legacy/k8s/security/opa-gatekeeper/install.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gatekeeper-system
  labels:
    admission.gatekeeper.sh/ignore: "no"
---
apiVersion: v1
kind: Service
metadata:
  name: gatekeeper-webhook-service
  namespace: gatekeeper-system
spec:
  ports:
    - name: https
      port: 443
      targetPort: 8443
  selector:
    control-plane: controller-manager
    gatekeeper.sh/operation: webhook
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatekeeper-audit
  namespace: gatekeeper-system
  labels:
    control-plane: audit-controller
    gatekeeper.sh/operation: audit
spec:
  replicas: 1
  selector:
    matchLabels:
      control-plane: audit-controller
      gatekeeper.sh/operation: audit
  template:
    metadata:
      labels:
        control-plane: audit-controller
        gatekeeper.sh/operation: audit
    spec:
      serviceAccountName: gatekeeper-admin
      containers:
        - name: manager
          image: openpolicyagent/gatekeeper:v3.14.0
          args:
            - --audit-interval=60
            - --log-level=INFO
            - --constraint-violations-limit=20
            - --audit-from-cache=false
            - --audit-chunk-size=500
            - --operation=audit
            - --operation=status
            - --logtostderr
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /healthz
              port: 9090
          readinessProbe:
            httpGet:
              path: /readyz
              port: 9090
          resources:
            limits:
              cpu: 1000m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 999
            runAsNonRoot: true
            runAsUser: 1000
      terminationGracePeriodSeconds: 60
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatekeeper-controller-manager
  namespace: gatekeeper-system
  labels:
    control-plane: controller-manager
    gatekeeper.sh/operation: webhook
spec:
  replicas: 3
  selector:
    matchLabels:
      control-plane: controller-manager
      gatekeeper.sh/operation: webhook
  template:
    metadata:
      labels:
        control-plane: controller-manager
        gatekeeper.sh/operation: webhook
    spec:
      serviceAccountName: gatekeeper-admin
      containers:
        - name: manager
          image: openpolicyagent/gatekeeper:v3.14.0
          args:
            - --port=8443
            - --logtostderr
            - --log-denies=false
            - --emit-admission-events=true
            - --log-level=INFO
            - --exempt-namespace=gatekeeper-system
            - --operation=webhook
          imagePullPolicy: Always
          ports:
            - containerPort: 8443
              name: webhook-server
              protocol: TCP
            - containerPort: 8888
              name: metrics
              protocol: TCP
            - containerPort: 9090
              name: healthz
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz
              port: 9090
          readinessProbe:
            httpGet:
              path: /readyz
              port: 9090
          resources:
            limits:
              cpu: 1000m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 999
            runAsNonRoot: true
            runAsUser: 1000
      terminationGracePeriodSeconds: 60
